Web socket create first data replace

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,7 +8,7 @@
     <title >Crypto Viewer</title>
     <link rel="stylesheet" href="{% static 'deps/css/style.css'%}">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'deps/css/bootstrap.min.css' %}">
     {% block css %}
     {% endblock %}
 </head>
