--- a/main/templates/main/coins_list.html
+++ b/main/templates/main/coins_list.html
@@ -17,8 +17,8 @@
                 <form action=""  method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
                     <p class="text-white mx-3 mt-3">Sorting by price:</p>
                     <div class="form-check text-white mx-3">
-                        <input class="form-check-input" type="radio" name="order_by_price" id="flexRadioDefault1" value="default" checked>
-                        <label class="form-check-label" for="flexRadioDefault1">
+                        <input class="form-check-input" type="radio" name="order_by_price" id="flexRadioDefaultPrice" value="default" checked>
+                        <label class="form-check-label" for="flexRadioDefaultPrice">
                             Default
                         </label>
                     </div>
@@ -53,6 +53,19 @@
                             Volume Down
                         </label>
                     </div>
+                    <p class="text-white mx-3 mt-3">Sorting by name:</p>
+                    <div class="form-check text-white mx-3">
+                        <input class="form-check-input" type="radio" name="order_by_name" id="flexRadioNameAsc" value="Asc" checked>
+                        <label class="form-check-label" for="flexRadioNameAsc">
+                            Name asc
+                        </label>
+                    </div>
+                    <div class="form-check text-white mx-3">
+                        <input class="form-check-input" type="radio" name="order_by_name" id="flexRadioNameDec" value="Des" >
+                        <label class="form-check-label" for="flexRadioNameDec">
+                            Name dec
+                        </label>
+                    </div>
                     <button type="submit" class="btn btn-primary mx-3 mt-3">Use</button>
                 </form>
             </div>
@@ -76,13 +89,13 @@
 
                 {% for coin in coins  %}
 
-                    <div class="coin_item_wrapper" onclick="window.location.href='{% url 'coins:coin' %}'">
+                    <div class="coin_item_wrapper" onclick="window.location.href='{% url 'coins:coin' coin.slug %}'">
                         <div class="coin_item">
                             <div class="coin name" >
                                 {% if coin.image %}
-                                	<img src="{% static coin.image %}" alt="logo" class="coin_logo">
+                                	<img src="{{ coin.image.url }}" alt="logo" class="coin_logo">
                                     {% else %}
-                                	<img src="#" alt="logo" class="coin_logo">
+                                	<img src="{% static 'deps/images/Not found image.png' %}" alt="logo" class="coin_logo">
                                 {% endif %}
                                 <span class="coin_text">{{ coin.symbol }} {{ coin.name }}</span>
                             </div>
@@ -106,13 +119,30 @@
             <!--  content coin end    -->
         </div>
     </div>
-    <div class="pagination">
-        <button id="prev-btn" style="border-radius: 4px">Previous</button>
-        <button id="next-btn1" style="border-radius: 4px">1</button>
-        <button id="next-btn2" style="border-radius: 4px">2</button>
-        <button id="next-btn3" style="border-radius: 4px">3</button>
-        <button id="next-btn" style="border-radius: 4px">Next</button>
-    </div>
+
+    <!-- Pagination -->
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
+                <li class="page-item {% if not coins.has_previous %}disabled{% endif %}  ">
+                  <a class="page-link" href="{% if coins.has_previous %}?page={{ coins.previous_page_number }}{% else %}#
+                  {% endif %}">Previous</a>
+                </li>
+
+                {% for page in coins.paginator.page_range %}
+                    {% if page >= coins.number|add:-2 and page <= coins.number|add:2 %}
+                    	<li class="page-item {% if coins.number == page %} active {% endif %} ">
+                            <a class="page-link" href="?page={{ page }}" >{{ page }}</a>
+                        </li>
+                    {% endif %} 
+                {% endfor %}
+                
+               <li class="page-item {% if not coins.has_next %}disabled{% endif %}  ">
+                  <a class="page-link" href="{% if coins.has_next %}?page={{ coins.next_page_number }}{% else %}#
+                  {% endif %}">Next</a>
+                </li>
+            </ul>
+        </nav>
+
 {% endblock %}
 
 {% block footer %}
