--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,7 +16,7 @@
     <!-- Main Page (Crypto Viewer) -->
     <section id="main-page">
         <header>
-            <div style="font-size: 20px; "><b><a style="text-decoration: none;  color: inherit;" href="{% url 'main:index' %}">Crypto Viewer</a></b></div>
+            <div style="font-size: 20px; "><b><a style="text-decoration: none;  color: inherit;" href="{% url 'coinList:index' %}">Crypto Viewer</a></b></div>
             <div class="auth_tool" style="display: flex; align-items: center; justify-content: space-around; gap:10px">
                 <div class="admin"><a style="text-decoration: none;  color: inherit;" href="{% url 'admin:index' %}" >Admin panel</a></div>
                 <div class="Profile"><a style="text-decoration: none;  color: inherit;" href="#" >Profile</a></div>
