--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,4 +3,7 @@
 
 {% block content %}
     <h1>{{ content }}</h1>
+     <h1>WebSocket Data:</h1>
+    <div id="liveData">Waiting data...</div>
+    <script src="{% static 'deps/js/testing/main.js' %}"></script>
 {% endblock %}
